[gd_scene load_steps=2 format=3 uid="uid://cqknl4fa1ofy"]

[ext_resource type="Script" path="res://Props/Weapon.gd" id="2_otbm5"]

[node name="Weapon" type="Node3D"]
script = ExtResource("2_otbm5")

[node name="ShootAudio" type="AudioStreamPlayer3D" parent="."]

[node name="ReloadAudio" type="AudioStreamPlayer3D" parent="."]

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true
